# cortex-em-spectrum-foundation

./: .gitignore  CLI_HELP.md  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
ElectromagneticSpectrumFoundation/: ElectromagneticSpectrumFoundation.cpp  ElectromagneticSpectrumFoundation.sln  ElectromagneticSpectrumFoundation.vcxproj  ElectromagneticSpectrumFoundation.vcxproj.filters
Knowledge-Guides/: Gaussian-Field-Invariants.md
cpp-foundation/: ANTHOLOGICAL_PRECEDENT.md  CMakeLists.txt  cochat_anthology.hpp  cortex_foundation.vcxproj
cpp-foundation/include/: adaptive_gpu_delegation.hpp  calibration_10frame.hpp  calibration_io.hpp  cochat_bridge_win.hpp  color_math_fast.hpp  context_overflow_guard.hpp  correction_queue.hpp  cortex_baseline_processor.hpp  cortex_buffer_baseline.hpp  deviation_router.hpp  deviation_router_autotune.hpp  event_triggers.hpp  filters.hpp  frame_arena.hpp  frame_cache.hpp  frame_recorder.hpp  image_corrections.hpp  image_io_ppm.hpp  image_ops.hpp  intelligent_term_delegator.hpp  live_viewer_win.hpp  llm_frame_pool.hpp  llm_streamer.hpp  metric_bus.hpp  metrics_logger.hpp  micro_param_tuner.hpp  mirror_cache.hpp  operand_map.hpp  operation_cache.hpp  or_switch.hpp  packed_frame_store.hpp  packed_frame_timeline.hpp  ppm_io.hpp  precision_safe_threading.hpp  process_memory.hpp  quad_array_manager.hpp  rgb565.hpp  running_stats.hpp  runtime_adaptive_guard.hpp  scene_activity_tracker.hpp  (+10 more)
cpp-foundation/src/: context_overflow_guard.cpp  context_overflow_integration.cpp  dynamic_performance_integration.cpp  main.cpp  main_full.cpp  precision_threading_integration.cpp  runtime_adaptive_guard.cpp  screen_capture_shim.cpp  spectrum_cuda.cu  static_frame_generator.cpp
optimization-scripts/: adaptive_gpu_delegation.py  context_overflow_guard.py  dynamic_optimized_library.py  intelligent_term_delegator.py  precision_safe_threading.py
python-helpers/: create-manifest.py
tests/: main_tests.cpp  test_harness.hpp  test_image_ops.cpp  test_llm_frame_pool.cpp  test_operand_map.cpp  test_spsc_ring.cpp  test_utils.hpp
